WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152278
[Coordinated Graphics] CSS transition effect is not shown when transformed with "%" unit.
https://bugs.webkit.org/show_bug.cgi?id=152278
Summary
[Coordinated Graphics] CSS transition effect is not shown when transformed wi...
Yonggeol Jung
Reported
2015-12-14 15:19:02 PST
Created
attachment 267323
[details]
Sample case for this issue. CSS transition effect is not shown when transformed with "%" unit.
Attachments
Sample case for this issue.
(299 bytes, text/plain)
2015-12-14 15:19 PST
,
Yonggeol Jung
no flags
Details
patch
(2.24 KB, patch)
2015-12-14 21:14 PST
,
Yonggeol Jung
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yonggeol Jung
Comment 1
2015-12-14 15:48:47 PST
***
Bug 152277
has been marked as a duplicate of this bug. ***
Yonggeol Jung
Comment 2
2015-12-14 21:14:59 PST
Created
attachment 267341
[details]
patch
WebKit Commit Bot
Comment 3
2015-12-14 22:49:28 PST
Comment on
attachment 267341
[details]
patch Clearing flags on attachment: 267341 Committed
r194095
: <
http://trac.webkit.org/changeset/194095
>
WebKit Commit Bot
Comment 4
2015-12-14 22:49:31 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug