[Coordinated Graphics] CSS transition effect is not shown when transformed with "%" unit. https://bugs.webkit.org/show_bug.cgi?id=152278

Patch by YongGeol Jung <yg48.jung@samsung.com> on 2015-12-14
Reviewed by Darin Adler.

boxSize is encoded as FloatSize type but decoded as IntSize type.
So boxSize gets invalid value after decoding.
Due to this layer goes to out of screen during animation.

* Shared/CoordinatedGraphics/CoordinatedGraphicsArgumentCoders.cpp:
(IPC::ArgumentCoder<TextureMapperAnimation>::decode):

Canonical link: https://commits.webkit.org/170406@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194095 268f45cc-cd09-0410-ab3c-d52691b4dbfc